# cs-final

./: .gitignore  Implementation_diary.md  README.md  TOS.md  draft.md  literature_review.md  privacy_policy.md  project_plan.md  requirement_analysis.md  system_design.md
.github/workflows/: github-action.yml
note_app/: LICENSE  README.md  pyproject.toml  wsgi.py
note_app/napp/: __init__.py  auth.py  db.py  main.py  note.py  reminder.py  schema.sql  upload.py
note_app/napp/static/: style.css
note_app/napp/templates/: base.html  index.html
note_app/napp/templates/auth/: register.html
note_app/napp/templates/note/: list.html
note_app/napp/templates/reminder/: create.html  list.html  update.html
note_app/napp/templates/upload/: create.html  list.html
presentation/: main.typ
prof_report/: prof_report.typ  works.bib
report_src/: report.typ  works.bib
system_design/: ERD.excalidraw  Page Designs.excalidraw  UI_navigation.excalidraw  artefact_architecture.excalidraw
timesheets/: 01-07-2025  02-07-2025  04-07-2025  06-07-2025  24-06-2025  26-06-2025  27-06-2025  28-06-2025  29-06-2025
